2014-04-24  Benno Schulenberg  <bensberg@justemail.net>
	* doc/faq.html: Update a few URLs, delete some obsolete ones, update
	the section on configuration flags and on translating nano, a whole
	series of other small fixes and adjustments.

2014-04-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c, src/help.c, src/text.c, src/browser.c: Remove
	several unneeded double semicolons, and two relic comments.
	* src/help.c (parse_help_input), src/browser.c (parse_browser_input):
	Make the Minus and Space keys work in the help viewer and file browser
	also when the PrevPage and NextPage functions are bound to meta-key
	sequences -- searching for these will not find them.  So, instead put
	in the standard key code.  This fixes Savannah bug #42140.
	* src/global.c (first_sc_for): Stop the whole charade of preferring
	control keys over meta keys over function keys, but return the first
	one in the list -- just like the function name implies.  This will
	make a user-defined shortcut appear in the two bottomlines without
	having to unbind the existing one first -- better feedback.
	* src/global.c(shortcut_init, flagtostr, strtosc): Put the two
	wrapping toggles together and increase their contrast a bit.
	* src/nano.c (usage), doc/man/nano{.1,rc.5}, doc/texinfo/nano.texi:
	Increase the contrast between hard-wrapping and soft-wrapping.

2014-04-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Put the movement keys in the
	help viewer in the order of increasing stride.
	* src/global.c (shortcut_init): Rename many constants from
	'*_msg' to '*_tag' to reduce confusion with 'nano_*_msg'.
	* src/global.c (shortcut_init): Elide several pointless constants.
	* src/global.c (shortcut_init): Elide more unneeded constants, and
	update some translator comments and shorten a few tags.
	* src/global.c (shortcut_init): Delete unneeded empty funcs; being
	in the list of shortcuts is enough.